src/objects/pymt__Processor_Event__c.object
<CustomObject>
    <description>Used to cache transaction events for ACHWorks before applying them to the SF database.</description>
    <fields>
        <fullName>pymt__Action_Date__c</fullName>
        <label>Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pymt__Action_Detail__c</fullName>
        <label>Action Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pymt__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pymt__Back_End_SN__c</fullName>
        <label>Back End SN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Currency_ISO_Code__c</fullName>
        <label>Currency ISO Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CZK</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>HUF</fullName>
                </value>
                <value>
                    <fullName>ILS</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>MXN</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>PLN</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Customer_Transaction_Type__c</fullName>
        <label>Customer Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Debit</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pymt__Front_End_Trace__c</fullName>
        <label>Front End Trace</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pymt__PaymentX__c.pymt__Processor_Connection__c</field>
                <operation>equals</operation>
                <valueField>$Source.pymt__Processor_Connection__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pymt__PaymentX__c</referenceTo>
        <relationshipLabel>Processor Events</relationshipLabel>
        <relationshipName>Processor_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pymt__Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Status details applied to Payment.</description>
        <inlineHelpText>Status details applied to Payment.</inlineHelpText>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Processor_Connection__c</fullName>
        <label>Processor Connection</label>
        <referenceTo>pymt__Processor_Connection__c</referenceTo>
        <relationshipLabel>Processor Events</relationshipLabel>
        <relationshipName>Processor_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pymt__Response_Code__c</fullName>
        <label>Response Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Source_File__c</fullName>
        <label>Source File</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Processor Event</label>
    <listViews>
        <fullName>pymt__ACH_Returns</fullName>
        <columns>NAME</columns>
        <columns>pymt__Action_Date__c</columns>
        <columns>pymt__Customer_Name__c</columns>
        <columns>pymt__Amount__c</columns>
        <columns>pymt__Currency_ISO_Code__c</columns>
        <columns>pymt__Response_Code__c</columns>
        <columns>pymt__Processor_Connection__c</columns>
        <columns>pymt__Payment__c</columns>
        <columns>pymt__Processed__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>pymt__Processor_Event__c.pymt__ACHWorks</value>
        </filters>
        <label>ACH Returns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>pymt__All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>pymt__Payment__c</columns>
        <columns>pymt__Processor_Connection__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Processor Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Processor Events</pluralLabel>
    <recordTypes>
        <fullName>pymt__ACHWorks</fullName>
        <active>true</active>
        <description>ACH Return Record for ACHWorks</description>
        <label>ACHWorks</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>